--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
 html, body, * {
   box-sizing:border-box;
 }
+.cf:before,
+.cf:after{
+  content:" ";
+  display:table;
+}
+
+.cf:after{
+  clear:both;
+}
+
+.float-left{
+  
+}
