feat (main) Add better CSS stylings

--- a/bolierplate.css
+++ b/bolierplate.css
@@ -1,7 +1,24 @@
 html, body, * {
   box-sizing:border-box;
 }
+a:link{
+  color:gold;
 
+}
+a:visited{
+  color:green;
+
+}
+a:hover{
+  background-color: black;
+  color:white;
+}
+a:focus{
+  font-style:italic;
+}
+a:active{
+ text-decoration: line-through;
+}
 .cf:before,
 .cf:after{
   content:" ";
