--- a/main.css
+++ b/main.css
@@ -33,11 +33,12 @@ nav img{
   background-color: inherit;
   float:left;
 }
-header{
+nav{
   text-align:center;
   color:black;
   font-weight: bolder;
-  border: 5px dotted hotpink;
+  border: 10px double hotpink;
+  border-radius: 10px;
 }
 nav{
   font-size:2em;
@@ -77,7 +78,8 @@ tr.even{
 }
 .banner{
   width:100%;
-  height:auto;
+  height:28em;
+
 }
 footer{
   text-align: center;
@@ -105,6 +107,7 @@ a:visited{
 a:hover{
   background-color: black;
   color:white;
+  font-style: italic;
 }
 a:focus{
   font-style:italic;
@@ -113,7 +116,9 @@ a:active{
  text-decoration: line-through;
 }
 
-
+tr:hover{
+  background-color:white;
+}
 
 
 
